SERVER-16085: Windows service: net stop MongoDB gives an error even after stopping the service